--- a/WebContent/network.xhtml
+++ b/WebContent/network.xhtml
@@ -25,8 +25,8 @@
 					url="http://opennebula.org/documentation:documentation" />
 				<p:menuitem value="About" icon="/images/dock/info.png"
 					url="http://euranova.eu" />
-				<p:menuitem value="Sign Out" icon="/images/dock/exit.png"
-					actionListener="#{userManagedBean.logout}"  />
+				<p:menuitem value="Sign Out" icon="/images/dock/exit.png" 
+				action="#{userManagedBean.logout}"  />
 			</p:dock>
 </h:form>
 		</p:layoutUnit>
@@ -48,7 +48,7 @@
 						</p:commandButton>
 						<p:commandButton type="push" value="Update"
 							image="ui-icon ui-icon-arrowrefresh-1-w"
-							actionListener="#{networkBean.logout}" update="NTable">
+							actionListener="#{networkBean.updateNet}" update="NTable">
 						</p:commandButton>
 						<p:commandButton type="push" value="Delete" image="ui-icon-trash"
 							actionListener="#{networkBean.deleteNet}" update="NTable">
@@ -101,7 +101,7 @@
 						<h:outputText value="#{net.address}" />
 					</p:column>
 
-					<p:column sortBy="#{net.allocation}" filterBy="#{net.alloation}">
+					<p:column sortBy="#{net.allocation}" filterBy="#{net.allocation}">
 						<f:facet name="header">
 							<h:outputText value="Allocation" />
 						</f:facet>
@@ -123,7 +123,7 @@
 
 	<p:growl id="grow" showDetail="true" />
 	<p:dialog id="crDlg" header="Network Creation" widgetVar="createDlg"
-		showEffect="bounce" hideEffect="explode" width="600"
+		showEffect="bounce" hideEffect="explode" width="700"
 		closeListener="#{networkBean.updateList}" onCloseUpdate="NTable"
 		update="NTable">
 		<h:form>
